CSS changes to fix view ability issues on short desktop browser, as well as mobile that caused nav items to be cut off

--- a/css/trs-theme.css
+++ b/css/trs-theme.css
@@ -1302,11 +1302,13 @@ textarea.input-group-sm > .form-control, textarea.input-group-sm > .input-group-
 }
 .navbar-inverse .nav-stacked { background-color: #666; padding-right: 0; overflow: hidden; }
 .navbar-inverse .nav-stacked li { position: static; font-family: 'PlutoSansBold', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1; color: #fff; text-transform: uppercase; }  
+
 .navbar-inverse .nav-stacked .dropdown-menu-sub > li { border: none; } 
 .navbar-inverse .nav-stacked li a, .navbar-inverse .nav-stacked li.nav-stacked-top, .navbar-inverse .nav-stacked .dropdown-menu > li > a, .navbar-inverse .nav-stacked li.nav-stacked-nonLink 
 { font-family: 'PlutoSansBold', Helvetica, Arial, sans-serif; font-size: 13px; line-height: .9; color: #fff; text-transform: uppercase; padding: 15px; display: block; }
 .navbar-inverse .nav-stacked li a:hover { color: #88e333; }
 .navbar-inverse .nav-stacked .dropdown-menu-sub > li > a { font-family: 'PlutoSansRegular', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1; color: #999; text-transform: none; padding: 10px 15px; display: block; }
+.navbar-inverse .nav-stacked li.dropdown a, .navbar-inverse .nav-stacked li.alt a { padding: 15px 30px 15px 15px; }
 .navbar-inverse .nav-stacked li.nav-stacked-top { font-size: 18px; line-height: 1; color: #88e333; padding: 15px 15px; }
 .navbar-inverse .nav-stacked.nav-utility li.nav-stacked-top { background-color: #474747; }
 .navbar-inverse .nav-stacked.nav-utility li.nav-contact { padding: 20px 15px; }
@@ -1330,17 +1332,29 @@ textarea.input-group-sm > .form-control, textarea.input-group-sm > .input-group-
   -moz-transition: -moz-transform .5s; -o-transition: -o-transform .5s; -webkit-transition: -webkit-transform .5s; transition: transform .5s; }
 .navbar-inverse .nav-stacked .dropdown.open .dropdown-menu { -moz-transform: translateX(-100%); -ms-transform: translateX(-100%); -webkit-transform: translateX(-100%); transform: translateX(-100%); }
 @media (min-width:768px) {
-  .navbar-inverse .nav-stacked li a, .navbar-inverse .nav-stacked li.nav-stacked-top, .navbar-inverse .nav-stacked .dropdown-menu > li > a, .navbar-inverse .nav-stacked li.nav-stacked-nonLink { font-size: 16px; line-height: 1; padding: 18px 30px 18px 15px; }
-  .navbar-inverse .nav-stacked li.nav-stacked-top { font-size: 22px; padding: 25px 15px; }
+  .navbar-inverse .nav-stacked li a, .navbar-inverse .nav-stacked li.nav-stacked-top, .navbar-inverse .nav-stacked .dropdown-menu > li > a, .navbar-inverse .nav-stacked li.nav-stacked-nonLink { font-size: 14px; line-height: 1; padding: 18px 30px 18px 15px; }
+  .navbar-inverse .nav-stacked li.dropdown, .navbar-inverse .nav-stacked li.alt { height: calc(10vh - 8px);
+    content: 'viewport-units-buggyfill; height: calc(10vh - 8px)'; }
+  .navbar-inverse .nav-stacked li.nav-stacked-top { font-size: 22px; /*padding: 25px 15px;*/ padding: 18px 15px; }
   .navbar-inverse .nav-contact { margin-top: 25vh;
     content: 'viewport-units-buggyfill; margin-top: 25vh'; }
   .navbar-inverse .nav-stacked.nav-utility li.nav-feature a { line-height: 140px; font-size: 24px; }
 }
+
 @media (min-width:992px) {
-  .navbar-inverse .nav-stacked li a, .navbar-inverse .nav-stacked .dropdown-menu > li > a, .navbar-inverse .nav-stacked li.nav-stacked-nonLink { font-size: 14px; }
+  /*.navbar-inverse .nav-stacked li a, .navbar-inverse .nav-stacked .dropdown-menu > li > a, .navbar-inverse .nav-stacked li.nav-stacked-nonLink { font-size: 14px; }*/
+  .navbar-inverse .nav-stacked li.dropdown, .navbar-inverse .nav-stacked li.alt { height: calc(10vh - 14px);
+    content: 'viewport-units-buggyfill; height: calc(10vh - 14px)'; }
   .navbar-inverse .nav-stacked li.nav-stacked-top { font-size: 24px; }
 }
-@media (min-width:1060px) {
+
+@media screen and (min-width:768px) and (min-height:768px){
+  .navbar-inverse .nav-stacked li.dropdown a, .navbar-inverse .nav-stacked li.alt a { padding: 25px 30px 25px 15px; }
+}
+@media screen and (min-width:768px) and (min-height:900px){
+  .navbar-inverse .nav-stacked li.dropdown a, .navbar-inverse .nav-stacked li.alt a { padding: 30px 30px 30px 15px; }
+}
+@media (min-width:1100px) {
   .navbar-inverse .nav-stacked li a, .navbar-inverse .nav-stacked .dropdown-menu > li > a, .navbar-inverse .nav-stacked li.nav-stacked-nonLink { font-size: 16px; }
 }
 
